--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,15 @@
     <title>Todos App</title>
   </head>
   <body>
-    <p ng-repeat="todo in controller.todos">
-      {{ todo.text }}: {{ todo.completed ? "completed" : "not completed" }}
-    </p>
-    <input id="new-todo-name" type="text" ng-model="todoText">
-    <button id="add-todo" ng-click="controller.addToDo(todoText);">Add a
-ToDo</button>`
-    <button id="remove-todo" ng-click="controller.removeToDo();">Remove last ToDo</button>
+    <div id="todos" ng-controller="ToDoController as controller">
+      <p ng-repeat="todo in controller.todos">
+      {{ todo.text  }}: {{ todo.completed ? "completed" : "not
+      completed"  }}
+      </p>
+      <input id="new-todo-name" type="text" ng-model="todoText">
+      <button id="add-todo" ng-click="controller.addToDo(todoText);">Add a
+ToDo</button>
+      <button id="remove-todo" ng-click="controller.removeToDo();">Remove last ToDo</button>
+    </div>
   </body>
 </html>
